# MLS-Bench

./: .gitattributes  .gitignore  EDIT_RANGE_GUARD_FIX_PROPOSAL.md  EDIT_RANGE_GUARD_FIX_test.py  README.md  pyproject.toml
configs/: discover.yaml  openevolve.yaml  react.yaml
datasets/mls-bench/: dataset.toml
datasets/mls-bench/mls-bench__llm-offline-rl/environment/_scaffold/MathRuler/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
datasets/mls-bench/mls-bench__llm-offline-rl/environment/_scaffold/MathRuler/data/aime_splits/: aime_2024.jsonl  aime_2025.jsonl
datasets/mls-bench/mls-bench__llm-offline-rl/environment/_scaffold/MathRuler/data/gsm8k_splits/: test.jsonl
datasets/mls-bench/mls-bench__llm-offline-rl/environment/_scaffold/MathRuler/mathruler/: grader.py
datasets/mls-bench/mls-bench__llm-offline-rl/environment/_scaffold/MathRuler/scripts/: aime_to_math.py  gsm8k_to_math.py
harbor/: README.md  harbor_env.py  run.yaml
harbor/tasks/: dataset.toml
harbor_adapter/: README.md  STATUS.md  adapter_metadata.json  parity_experiment.json  pyproject.toml  run_mls-bench.yaml
harbor_adapter/scripts/: build_base_image.py
harbor_adapter/src/mls_bench/: __init__.py  adapter.py  harbor_env.py  main.py
harbor_adapter/src/mls_bench/task-template/: instruction.md.j2  task.toml.j2
harbor_adapter/src/mls_bench/task-template/environment/: Dockerfile.j2
harbor_adapter/src/mls_bench/task-template/solution/: solve.sh.j2
harbor_adapter/src/mls_bench/task-template/tests/: score_task.py  test.sh
harbor_adapter/tests/: test_adapter.py  test_scheduler.py  test_score_task.py
src/mlsbench/: cli.py  scheduler.py
src/openevolve/: _version.py  api.py  config.py  iteration.py  process_parallel.py
tasks/agent-tool-reasoning/: config.json  task_description.md
tasks/ai4bio-mutation-effect-prediction/: parser.py  task_description.md
tasks/ai4bio-protein-inverse-folding/: leaderboard.csv  task_description.md
tasks/ai4bio-protein-structure-repr/: config.json  leaderboard.csv  parser.py  score_spec.py  task_description.md
tasks/ai4sci-climate-emulation/: budget_check.py  config.json  leaderboard.csv  task_description.md
tasks/ai4sci-inverse-diffusion-algo/: task_description.md
tasks/ai4sci-mol-property-prediction/: leaderboard.csv  parser.py  task_description.md
tasks/ai4sci-pla-binding-affinity/: config.json  leaderboard.csv  (+3 more)
tools/: SL_CONTRACT.md  sl_climb_entrypoint.sh
(+3614 files in other folders)
